2016-01-10  SilverNexus
	* search.c: Refactored search code to reduce duplication of code.
	* search.h: Add decarations for new functions from the refactor.
	* parseArgs.c: Alter the single-match flags to assign to the new search functions.
	* settings.h: Alter the function pointer to the search function to match the new parameter list.
	* settings.c: Changed default search function to be refactored version.

2015-12-23  SilverNexus
	* output.c: Reduce severity of failed load of output file. If it fails, print to stdout.
	  Then shortened the file output phrase to reduce output size.
	  Alter check for stdout printing to match new design.
	* settings.c: Change default behavior to print to stdout.
	  Make case insensitive searches only exist if strcasestr does.
	* parseArgs.c: Retired -O and --stdout flags. Replaced by default behavior.
	  Only parse -n and --no-case if strcasestr exists.
	* settings.h: Remove flags field; it is no longer used.
	* main.c: Alter check for stdout printing to match new design.
	* README: Remove usage on the -O and --stdout flags.
	  Added a note to -n and --no-case indicating they only exist if strcasestr is present.
	* configure.ac: Removed check for vsnprintf. It is part of C99.

2015-12-22  SilverNexus
	* search.c: Refactor mmap()ed search to only find the line number when a match
	  is found.
	  Also, fixed a bug introduced from the refactor that caused it to always search for "alt".
	  Patched out a potential buffer overflow in the dirent-based implementation of the folder walk.
	* configure.ac: Removed redundant check for strstr(). It is part of C99.
	  Add check for strdup().
	* main.c: Fixed a bug where searchResults.txt was deleted when output is routed to stdout.
	* result_list.c: Use strdup() if we have it.

2015-12-21  SilverNexus
	* search.c: Add implemetation to use mmap() if available, otherwise use stdio.
	* configure.ac: Add check for function mmap().

2015-12-20  SilverNexus