@@ -1,7 +1,7 @@
 /***************************************************************************/
 /*                                                                         */
 /*                                search.h                                 */
-/* Original code written by Daniel Hawkins. Last modified on 2016-01-10.   */
+/* Original code written by Daniel Hawkins. Last modified on 2016-01-11.   */
 /*                                                                         */
 /* The file defines several searching functions' prototypes.               */
 /*                                                                         */
@@ -29,12 +29,7 @@ void search_folder(const char *dir_path);
 #error We do not have a directory traversal for your system at this time.
 #endif
 
-#ifdef HAVE_MMAP
 void search_file_multi_match(char * const addr, const char * const fpath);
 void search_file_single_match(char * const addr, const char * const fpath);
-#else
-void search_file_multi_match(FILE *file, const char * const fpath);
-void search_file_single_match(FILE *file, const char * const fpath);
-#endif
 
 #endif
